fixed featured images alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,6 +141,7 @@ section.featured {
 section.featured > div.wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 section.featured img.featured-image {
